# lego-town

./: README.md
api/: messages.options  messages.proto
arduino/: CMakeLists.txt  README.md  light-controller.ino  log.hpp  network_settings.h
arduino-api/: messages.proto
arduino/light-controller/: light-controller.ino
client/: README.md  elm-package.json  index.html
client/src/: App.elm  Building.elm  ColorPicker.elm  Model.elm  Settings.elm  SettingsPage.elm  Town.elm  TownApi.elm  TownPage.elm  Util.elm  View.elm
client/tests/: Tests.elm  elm-package.json
mock-arduino/: CMakeLists.txt  README.md  arduino.hpp  light_controller.cpp  light_controller.hpp  main.cpp
server/: Cargo.toml  README.md  build.rs  config-data.json  init-data.json
server/src/: client.rs  client_api.rs  main.rs  messages.rs  town.rs  town_controller.rs
