[package]
name = "lego-server"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]
build = "build.rs"

[dependencies]
clap = "2.18.0"
itertools = "0.5.6"
protobuf = "1.0.24"
read_color = "0.1.0"
rustc-serialize = "0.3"
ws = "0.5.3"

[build-dependencies.protobuf_build]
git = "https://github.com/plietar/rust-protobuf-build.git"
optional = true

[dependencies.protobuf_macros]
git = "https://github.com/plietar/rust-protobuf-macros.git"

[features]
default = ["protobuf_build"]
